--- a/public/index.html
+++ b/public/index.html
@@ -170,7 +170,7 @@
           <div class="background-main noselect">College Consultation</div>
         </div>
         <div class="hero__intro">
-          <h1>Simple Online Tutoring</h1>
+          <h1>Advanced Online Tutoring</h1>
           <h4>ACT Prep and Subject Tutoring with <a href="why.html">Adaptive Learning Intelligence</a></h4>
           <div><a class="hero__button" href="pricing.html">Get 2 <b>FREE</b> hours of ACT Prep</a></div>
         </div>
@@ -192,6 +192,55 @@
           <a href="pricing.html?course=subjectTutoring" class="course-item"><h4>Other Homework</h4></a>
         </div>
       </section> -->
+
+      <!-- <section class="questionnaire">
+        <div class="panel">
+          <div class="question open" id="question_0">
+            <h3 class="text">I am a...</h3>
+            <button class="option" onclick="goForwardToQuestion(1)">Student</button>
+            <button class="option" onclick="goForwardToQuestion(1)">Parent</button>
+          </div>
+        </div>
+
+        <div class="panel">
+          <div class="question" id="question_1">
+            <h3 class="text">Second question</h3>
+            <button class="option" onclick="goForwardToQuestion(2)">Option 1</button>
+            <button class="option" onclick="goForwardToQuestion(3)">Option 2</button>
+          </div>
+          <button class="back" onclick="goBackAQuestion()">Back</button>
+        </div>
+
+        <div class="panel">
+          <div class="question" id="question_2">
+            <h3 class="text">Option 1 from second question</h3>
+            <button class="option" onclick="goForwardToQuestion(4)">Option 1</button>
+            <button class="option" onclick="goForwardToQuestion(4)">Option 2</button>
+            <button class="option" onclick="goForwardToQuestion(4)">Option 3</button>
+          </div>
+          <button class="back" onclick="goBackAQuestion()">Back</button>
+        </div>
+
+        <div class="panel">
+          <div class="question" id="question_3">
+            <h3 class="text">Option 2 from second question</h3>
+            <button class="option" onclick="goForwardToQuestion(4)">Option 1</button>
+            <button class="option" onclick="goForwardToQuestion(4)">Option 2</button>
+            <button class="option" onclick="goForwardToQuestion(4)">Option 3</button>
+          </div>
+          <button class="back" onclick="goBackAQuestion()">Back</button>
+        </div>
+
+        <div class="panel">
+          <div class="question" id="question_4">
+            <h3 class="text">Final for both options</h3>
+            <button class="option">Option 1</button>
+            <button class="option">Option 2</button>
+            <button class="option">Option 3</button>
+          </div>
+          <button class="back" onclick="goBackAQuestion()">Back</button>
+        </div>
+      </section> -->
   
       <section class="method">
         <h5 class="title">The Lyrn Method</h5>
@@ -204,25 +253,25 @@
         <img src="Images/Lyrn_method_section_image.png" alt="Example course load">
       </section>
   
-      <!-- <section class="tutors">
+      <section class="tutors">
         <h5 class="title">Lyrn Qualified Tutors</h5>
-        <p class="description">All of our tutors have been certified to teach the ACT and have recieved exeptional grades
-          in all college level subject matter courses.
+        <p class="description">All of our tutors have been certified to teach the ACT and have gone through our rigoruous qualification process.
         </p>
         <div class="breakdown">
-          <div class="act-logo">
+          <!-- <div class="act-logo">
             <img src="Images/logo-act-blue-300.png" alt="act logo">
+          </div> -->
+          <div>
+            <h2>34+</h2>
+            <h5>ACT SCORES ON EVERY SECTION</h5>
           </div>
           <div>
-            <h2>33+</h2>
-            <h5>ACT SCORES</h5>
-          </div>
-          <div>
-            <h2>3.9</h2>
-            <h5>COLLEGE GPA</h5>
+            <h2>80+</h2>
+            <h5>TOPICS TAUGHT FOR OUR CURRICULUM</h5>
           </div>
         </div>
-      </section> -->
+      </div>
+      </section>
   
       <!-- <section class="faq">
         <h2 class="title">FAQ</h2>
@@ -269,6 +318,8 @@
           </div>
         </div>
       </section> -->
+
+      <!-- <section class="topics"></section> -->
 
       <section class="about">
         <h2>How can we help?</h2>
@@ -351,8 +402,6 @@
           </form>
         </div>
       </section>
-  
-      <!-- <section class="topics"></section> -->
     </main>
 
     <footer>
