unsubscribe email table

--- a/public/Dashboard/Dev.html
+++ b/public/Dashboard/Dev.html
@@ -96,6 +96,18 @@
     </div>
 
     <div>
+      <h4>Unsubscribe</h4>
+      <table id="unsubscribe-table" class="display compact cell-border">
+        <thead>
+          <tr>
+            <th>Email</th>
+            <th>Time</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+
+    <div>
       <h4>Errors</h4>
       <table id="error-table" class="display compact cell-border">
         <thead>
