--- a/public/index.html
+++ b/public/index.html
@@ -254,7 +254,8 @@
       </section>
   
       <section class="tutors">
-        <h5 class="title">Lyrn Qualified Tutors</h5>
+        <h5 class="title">Lyrn Tutors</h5>
+        <h2 class="subtitle">Qualified in each section</h2>
         <p class="description">All of our tutors have been certified to teach the ACT and have gone through our rigoruous qualification process.
         </p>
         <div class="breakdown">
@@ -263,11 +264,11 @@
           </div> -->
           <div>
             <h2>34+</h2>
-            <h5>ACT SCORES ON EVERY SECTION</h5>
+            <h5>ACT SCORES</h5>
           </div>
           <div>
             <h2>80+</h2>
-            <h5>TOPICS TAUGHT FOR OUR CURRICULUM</h5>
+            <h5>TOPICS MASTERED</h5>
           </div>
         </div>
       </div>
