--- a/public/new-act-invoice.html
+++ b/public/new-act-invoice.html
@@ -38,6 +38,7 @@
       <option value="actStudyGroup">ACT Study Group</option>
       <option value="actBasics">ACT Basics</option>
       <option value="actGuided">ACT Guided</option>
+      <option value="programPreview">Program Preview</option>
       <option value="subjectTutoring">Subject Tutoring</option>
     </select>
     <label>Events to included in the invoice</label>
@@ -53,4 +54,5 @@
     <label for="first Free">Is First Sessions Free</label>
     <input type="checkbox" name="firstFree" id="firstFree">
     <button onclick="submitInvoice()">Submit Invoice</button>
+    <button onclick="submitConfirmation()">Submit Confirmation</button>
   </body>
