--- a/email-templates/act-lesson-series/lesson-1.html
+++ b/email-templates/act-lesson-series/lesson-1.html
@@ -66,7 +66,7 @@
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             Want more? Get up to 2 hours of <b>FREE</b> personalized 1-on-1 ACT tutoring with one of our professional tutors. 
             To sign up, call us at <a href="tel:+13853000906" style="text-decoration: underline; font-weight: bold; color: #27c03a;">(385)-300-0906</a>. 
-            Visit <a href="https://lyrnwithus.com" style="text-decoration: underline; font-weight: bold; color: #27c03a;">our website</a> for more details.
+            Visit <a href="https://lyrnwithus.com/pricing" style="text-decoration: underline; font-weight: bold; color: #27c03a;">our website</a> for more details.
           </p>
         </td>
       </tr>
