--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -99,9 +99,7 @@
     </section>
 
     <section id="topicQuestionSection" onclick="closeModal(event, 'topicQuestionSection')">
-        <div id="topicQuestionContainer">
-            
-        </div>
+        <div id="topicQuestionContainer"></div>
     </section>
 
 
@@ -179,8 +177,8 @@
             </div>
         </div> -->
         <div class="print-outs">
-            <label for="printTest">Open Test</label>
-            <input id = 'printTest' placeholder = "B05 Math"></input>
+            <label for="printTest">Open Resource</label>
+            <input id = 'printTest' placeholder = "B05 Math / ACT Basics"></input>
         </div>
 
     </div>
