--- a/public/student-info-test.html
+++ b/public/student-info-test.html
@@ -33,7 +33,7 @@
       </div>
       <div id="form-scroll-block">
         <div id="spinnyBoiGoals" class="loader"></div>
-        <form onsubmit="return false">
+        <form onsubmit="() => {return false}">
           <div class="input-row">
           </div>
           <div class="input-row">
