--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -340,6 +340,14 @@
         <button id="actInvoiceNav" class="button">ACT Invoice</button>
     </section>
 
+    <section id="navigationSection_tutor" class="add-user-section">
+      <div id="navigationModal">
+        <div class="close" onclick="document.getElementById('navigationSection_tutor').style.display = 'none'">X</div>
+        <h4 style="margin: 0;">What would you like to see?</h4>
+        <button id="testTakerNav_tutor" class="button">Test Taker</button>
+        <button id="tutorInfoNav" class="button">Tutor Info</button>
+    </section>
+
     <section>
       <div class="header">
         <!-- <h1 id="locationName"></h1> -->
