--- a/email-templates/promo.html
+++ b/email-templates/promo.html
@@ -8,8 +8,10 @@
 
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
-        <td bgcolor="#101b42" align="center" style="color: white;">
-          <h1 style="font-size: 52px; margin:20px 10px;">Thank you for choosing Lyrn!</h1>
+        <td bgcolor="white" align="right" style="color:#27c03a; border-bottom: 2px solid #27c03a;">
+          <a href="https://lyrnwithus.com">
+            <img src="https://lyrnwithus.com/Images/Lyrn_Logo_Green.png" alt="Lyrn Logo" style="height: 3em;">
+          </a>
         </td>
       </tr>
     </table>
