--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -344,6 +344,7 @@
       <div id="navigationModal">
         <div class="close" onclick="document.getElementById('navigationSection_tutor').style.display = 'none'">X</div>
         <h4 style="margin: 0;">What would you like to see?</h4>
+        <button id="actNav_tutor" class="button">ACT</button>
         <button id="testTakerNav_tutor" class="button">Test Taker</button>
         <button id="tutorInfoNav" class="button">Tutor Info</button>
     </section>
