--- a/public/team.html
+++ b/public/team.html
@@ -385,6 +385,21 @@
             </div>
           </div>
         </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="Images/tutors/Joseph-Henderson.jpg" alt="Avatar">
+            </div>
+            <div class="flip-card-back">
+              <h1>Joseph Henderson</h1> 
+              <p>
+                I grew up in Logan Utah but am attending Brigham Young University in Provo Studying Applied Computational Mathematics with an emphasis in astronomy. 
+                I hope to have a career in academia or astrophysics one day. In my free time I enjoy learning languages, writing, hiking, playing hockey, and making food. 
+                I'm looking forward to working with all of you!
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
       
 
