--- a/email-templates/act-lesson-series/lesson-2.html
+++ b/email-templates/act-lesson-series/lesson-2.html
@@ -36,28 +36,90 @@
           </p>
           <div style="margin: 0 36px;">
             <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-              Given that p is a positive number, n is a negative number, and |p| < |n|, which of the following expressions has the greatest value?
+              Given that <i>p</i> is a positive number, <i>n</i> is a negative number, and 
+              <span style="border-left: 2px solid black; border-right: 2px solid black; padding-left: 4px; padding-right: 4px;"><i>p</i></span> > 
+              <span style="border-left: 2px solid black; border-right: 2px solid black; padding-left: 4px; padding-right: 4px;"><i>n</i></span> , which of the following expressions has the greatest value?
             </p>
-            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
-              <b>A.</b> |(p - n) / p|
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;display:inline-block;vertical-align:middle;">
+              <b>A.</b>
             </p>
-            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
-              <b>B.</b> |(p - n) / n|
+            <table style="display: inline-block; padding-left: 4px; padding-right: 4px; margin-bottom: 8px; border-left: 2px solid black; border-right: 2px solid black; margin-left: 8px;vertical-align:middle;">
+              <tbody>
+                <tr>
+                  <td style="border-bottom: 1px solid black; text-align: center; width: 45px;"><i>p &mdash; n</i></td>
+                </tr>
+                <tr>
+                  <td style="text-align: center; width: 45px;"><i>p</i></td>
+                </tr>
+              </tbody>
+            </table>
+            <br>
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;display:inline-block;vertical-align:middle;">
+              <b>B.</b>
             </p>
-            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
-              <b>C.</b> |(p + n) / (p - n)|
+            <table style="display: inline-block; padding-left: 4px; padding-right: 4px; margin-bottom: 8px; border-left: 2px solid black; border-right: 2px solid black; margin-left: 8px;vertical-align:middle;">
+              <tbody>
+                <tr>
+                  <td style="border-bottom: 1px solid black; text-align: center; width: 45px;"><i>p &mdash; n</i></td>
+                </tr>
+                <tr>
+                  <td style="text-align: center; width: 45px;"><i>n</i></td>
+                </tr>
+              </tbody>
+            </table>
+            <br>
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;display:inline-block;vertical-align:middle;">
+              <b>C.</b>
             </p>
-            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
-              <b>D.</b> |(p + n) / p|
+            <table style="display: inline-block; padding-left: 4px; padding-right: 4px; margin-bottom: 8px; border-left: 2px solid black; border-right: 2px solid black; margin-left: 8px;vertical-align:middle;">
+              <tbody>
+                <tr>
+                  <td style="border-bottom: 1px solid black; text-align: center; width: 45px;"><i>p + n</i></td>
+                </tr>
+                <tr>
+                  <td style="text-align: center; width: 45px;"><i>p &mdash; n</i></td>
+                </tr>
+              </tbody>
+            </table>
+            <br>
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;display:inline-block;vertical-align:middle;">
+              <b>D.</b>
             </p>
-            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
-              <b>E.</b> |(p + n) / n|
+            <table style="display: inline-block; padding-left: 4px; padding-right: 4px; margin-bottom: 8px; border-left: 2px solid black; border-right: 2px solid black; margin-left: 8px;vertical-align:middle;">
+              <tbody>
+                <tr>
+                  <td style="border-bottom: 1px solid black; text-align: center; width: 45px;"><i>p + n</i></td>
+                </tr>
+                <tr>
+                  <td style="text-align: center; width: 45px;"><i>p</i></td>
+                </tr>
+              </tbody>
+            </table>
+            <br>
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;display:inline-block;vertical-align:middle;">
+              <b>E.</b>
             </p>
+            <table style="display: inline-block; padding-left: 4px; padding-right: 4px; margin-bottom: 8px; border-left: 2px solid black; border-right: 2px solid black; margin-left: 8px;vertical-align:middle;">
+              <tbody>
+                <tr>
+                  <td style="border-bottom: 1px solid black; text-align: center; width: 45px;"><i>p + n</i></td>
+                </tr>
+                <tr>
+                  <td style="text-align: center; width: 45px;"><i>n</i></td>
+                </tr>
+              </tbody>
+            </table>
           </div>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            In this problem, we have the constraints that n is negative, p is positive, and the magnitude (absolute value) of p is greater than n. Thus, 
-            let's try p = 3 and n = -2. If we plug these numbers into all 5 answer choices, we will get 5/3 for F, 5/2 for G, 1/5 for H, 1/3 for J, and 1/2 for K. 
-            If we compare these 5 answers to each other, we will see that 5/2 (G) is the largest, making G the correct answer.
+            In this problem, we have the constraints that <i>n</i> is negative, <i>p</i> is positive, and the magnitude (absolute value) of <i>p</i> is greater than <i>n</i>. Thus, 
+            let's try <i>p</i> = 3 and <i>n</i> = &mdash;2. If we plug these numbers into all 5 answer choices, we will get&nbsp;
+            <sup>5</sup>&frasl;<sub>3</sub>&nbsp; for F,&nbsp;
+            <sup>5</sup>&frasl;<sub>2</sub>&nbsp; for G,&nbsp;
+            <sup>1</sup>&frasl;<sub>5</sub>&nbsp; for H,&nbsp;
+            <sup>1</sup>&frasl;<sub>3</sub>&nbsp; for J, and&nbsp;
+            <sup>1</sup>&frasl;<sub>2</sub>&nbsp; for K. 
+            If we compare these 5 answers to each other, we will see that&nbsp;
+            <sup>5</sup>&frasl;<sub>2</sub>&nbsp; is the largest, making G the correct answer.
           </p>
         </td>
       </tr>
