--- a/email-templates/act-lesson-series/lesson-2.html
+++ b/email-templates/act-lesson-series/lesson-2.html
@@ -34,7 +34,7 @@
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             For example,
           </p>
-          <div style="margin: 0 36px;">
+          <div style="margin: 0px 36px 36px;">
             <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
               Given that <i>p</i> is a positive number, <i>n</i> is a negative number, and 
               <span style="border-left: 2px solid black; border-right: 2px solid black; padding-left: 4px; padding-right: 4px;"><i>p</i></span> > 
