--- a/public/pricing.html
+++ b/public/pricing.html
@@ -378,7 +378,7 @@
               <label for="faq_0_previews" class="summary"><h3>What is a program preview?</h3></label>
               <div class="content">
                 <p>
-                  Programs are a great way to get try out our programs before starting. You get 30 minutes with one of our amazing tutors who will
+                  Programs previews are a great way to get try out our programs before starting. You get 30 minutes with one of our amazing tutors who will
                   teach a topic from our curriculum that appears most frequently on the ACT. 
                 </p>
               </div>
