--- a/email-templates/act-lesson-series/lesson-2.html
+++ b/email-templates/act-lesson-series/lesson-2.html
@@ -19,7 +19,7 @@
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
         <td style="padding: 30px 0px 30px 0px;">
-          <h2 style="font-size: 28px; margin:0 0 20px 0;">Math Logic</h2>
+          <h2 style="font-size: 28px; margin:0 0 20px 0;">Math - Logic</h2>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             Logic questions on the math section of the ACT is the third most important topic. You will see 4 - 5 of 
             these questions on every test. They constitute questions that require reasoning and logic or trial and 
